關於新增核心價值

--- a/01-About.html
+++ b/01-About.html
@@ -104,8 +104,8 @@
         <!-- 關於十鼓簡介 -->
         <div class="parallax_window">
             <div class="effect_box lax "
-                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+550) 0,(document.querySelector('#apple_effect').offsetTop+1400) 1,(document.querySelector('#apple_effect').offsetTop+1500) 0,"
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+550) 2, (document.querySelector('#apple_effect').offsetTop+1400) 1,(document.querySelector('#apple_effect').offsetTop+1500) 0,">
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+550) 0,(document.querySelector('#apple_effect').offsetTop+1400) 1,(document.querySelector('#apple_effect').offsetTop+2400) 0,"
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+550) 2, (document.querySelector('#apple_effect').offsetTop+1400) 1,(document.querySelector('#apple_effect').offsetTop+2400) 0,">
                 <div class="section sec-02 sec ">
                     <div class="About ">
                         <div class="about-title">關於十鼓</div>
@@ -123,8 +123,8 @@
         <!-- 沿革 -->
         <div class="parallax_window">
             <div class="effect_box lax"
-                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+1500) 0,(document.querySelector('#apple_effect').offsetTop+2350) 1,(document.querySelector('#apple_effect').offsetTop+3350) 0,"
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+1500) 0, (document.querySelector('#apple_effect').offsetTop+2350) 1, (document.querySelector('#apple_effect').offsetTop+3350) 2,">
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+2400) 0,(document.querySelector('#apple_effect').offsetTop+3250) 1,(document.querySelector('#apple_effect').offsetTop+4250) 0,"
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+2400) 0, (document.querySelector('#apple_effect').offsetTop+3250) 1, (document.querySelector('#apple_effect').offsetTop+4250) 2,">
                 <div class="section sec-03 sec">
                     <div class=" About">
                         <div class="about-title">沿革</div>
@@ -146,8 +146,8 @@
         <!-- 發展年表 -->
         <div class="parallax_window">
             <div class="effect_box lax "
-                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+3350) 0,(document.querySelector('#apple_effect').offsetTop+4200) 1,(document.querySelector('#apple_effect').offsetTop+5200) 0,"
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+3350) 2, (document.querySelector('#apple_effect').offsetTop+4200) 1,(document.querySelector('#apple_effect').offsetTop+5200) 0,">
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+4250) 0,(document.querySelector('#apple_effect').offsetTop+5100) 1,(document.querySelector('#apple_effect').offsetTop+6100) 0,"
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+4250) 2, (document.querySelector('#apple_effect').offsetTop+5100) 1,(document.querySelector('#apple_effect').offsetTop+6100) 0,">
                 <div class="section sec-04 sec ">
                     <div class="About-02">
                         <div class="about-title-02">發展年表</div>
@@ -221,18 +221,23 @@
         <!-- 核心價值 -->
         <div class="parallax_window">
             <div class="effect_box lax"
-                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+5200) 0,(document.querySelector('#apple_effect').offsetTop+6050) 1,(document.querySelector('#apple_effect').offsetTop+7050) 0,"
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+5200) 0, (document.querySelector('#apple_effect').offsetTop+6050) 1, (document.querySelector('#apple_effect').offsetTop+7050) 2,">
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+6100) 0,(document.querySelector('#apple_effect').offsetTop+6950) 1,(document.querySelector('#apple_effect').offsetTop+7950) 0,"
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+6100) 0, (document.querySelector('#apple_effect').offsetTop+6950) 1, (document.querySelector('#apple_effect').offsetTop+7950) 2,">
                 <div class="section sec-05 sec">
-                    <div class=" About">
+                    <div class=" About-03">
                         <div class="about-title">核心價值</div>
                         <div class="about-text">
-                            傳創台灣本土擊樂，廣納世界文化
-                            尊重歷史文化與之共存、共榮
-                            傳承和演奏無價的工業遺產和台灣本土的樂音
-                            一雙鼓棒為台灣寫下歷史之原創鼓團 「十」代表鼓棒的交疊 並象徵十方力量的匯集
+                            <div class="about-text-5-team">
+                                <i class="fas fa-circle color-gray"></i>
+                                <div class="about-text-5-text">傳創台灣本土擊樂，廣納世界文化</div>
+                                <i class="fas fa-circle color-gray"></i>
+                                <div class="about-text-5-text">尊重歷史文化與之共存、共榮</div><i
+                                    class="fas fa-circle color-gray"></i>
+                                <div class="about-text-5-text">傳承和演奏無價的工業遺產和台灣本土的樂音</div><i
+                                    class="fas fa-circle color-gray"></i>
+                                <div class="about-text-5-text">一雙鼓棒為台灣寫下歷史之原創鼓團「十」代表鼓棒的交疊 並象徵十方力量的匯集</div>
+                            </div>
                         </div>
-
                     </div>
                     <div class="footer">版權聲明</div>
                 </div>
