--- a/01-About.html
+++ b/01-About.html
@@ -91,22 +91,22 @@
     <!-- 仿apple官網效果 -->
     <div id="apple_effect">
         <!-- 關於十鼓標題 -->
-        <div class="parallax_window">
+        <!-- <div class="parallax_window">
             <div class="effect_box lax"
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop) 1, (document.querySelector('#apple_effect').offsetTop+550) 0 "
                 data-lax-scale="(document.querySelector('#apple_effect').offsetTop+400) 1, (document.querySelector('#apple_effect').offsetTop+550) 2">
-                <div class="section sec-01 sec">
+                <div class="sec-01 sec">
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- 關於十鼓標題 -->
 
         <!-- 關於十鼓簡介 -->
-        <div class="parallax_window">
+        <!-- <div class="parallax_window">
             <div class="effect_box lax "
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+550) 0,(document.querySelector('#apple_effect').offsetTop+1400) 1,(document.querySelector('#apple_effect').offsetTop+2400) 0,"
                 data-lax-scale="(document.querySelector('#apple_effect').offsetTop+550) 2, (document.querySelector('#apple_effect').offsetTop+1400) 1,(document.querySelector('#apple_effect').offsetTop+2400) 0,">
-                <div class="section sec-02 sec ">
+                <div class="sec-02 sec ">
                     <div class="About ">
                         <div class="about-title">關於十鼓</div>
                         <div class="about-text">
@@ -117,15 +117,15 @@
                 </div>
 
             </div>
-        </div>
+        </div> -->
         <!-- 關於十鼓簡介 -->
 
         <!-- 沿革 -->
-        <div class="parallax_window">
+        <!-- <div class="parallax_window">
             <div class="effect_box lax"
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+2400) 0,(document.querySelector('#apple_effect').offsetTop+3250) 1,(document.querySelector('#apple_effect').offsetTop+4250) 0,"
                 data-lax-scale="(document.querySelector('#apple_effect').offsetTop+2400) 0, (document.querySelector('#apple_effect').offsetTop+3250) 1, (document.querySelector('#apple_effect').offsetTop+4250) 2,">
-                <div class="section sec-03 sec">
+                <div class="sec-03 sec">
                     <div class=" About">
                         <div class="about-title">沿革</div>
                         <div class="about-2-text">
@@ -140,15 +140,15 @@
                     <div class="footer">版權聲明</div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- 沿革 -->
 
         <!-- 發展年表 -->
-        <div class="parallax_window">
+        <!-- <div class="parallax_window">
             <div class="effect_box lax "
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+4250) 0,(document.querySelector('#apple_effect').offsetTop+5100) 1,(document.querySelector('#apple_effect').offsetTop+6100) 0,"
                 data-lax-scale="(document.querySelector('#apple_effect').offsetTop+4250) 2, (document.querySelector('#apple_effect').offsetTop+5100) 1,(document.querySelector('#apple_effect').offsetTop+6100) 0,">
-                <div class="section sec-04 sec ">
+                <div class="sec-04 sec ">
                     <div class="About-02">
                         <div class="about-title-02">發展年表</div>
                         <div class="about-3-text">
@@ -215,15 +215,15 @@
                 </div>
 
             </div>
-        </div>
+        </div> -->
         <!-- 發展年表 -->
 
         <!-- 核心價值 -->
-        <div class="parallax_window">
+        <!-- <div class="parallax_window">
             <div class="effect_box lax"
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+6100) 0,(document.querySelector('#apple_effect').offsetTop+6950) 1,(document.querySelector('#apple_effect').offsetTop+7950) 0,"
                 data-lax-scale="(document.querySelector('#apple_effect').offsetTop+6100) 0, (document.querySelector('#apple_effect').offsetTop+6950) 1, (document.querySelector('#apple_effect').offsetTop+7950) 2,">
-                <div class="section sec-05 sec">
+                <div class="sec-05 sec">
                     <div class=" About-03">
                         <div class="about-title">核心價值</div>
                         <div class="about-text">
@@ -242,91 +242,146 @@
                     <div class="footer">版權聲明</div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- 核心價值 -->
 
         <!-- 園區主題介紹 -->
+        <!-- <div class="parallax_window">
+            <div class="effect_box lax"
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+7950) 0, (document.querySelector('#apple_effect').offsetTop+8800) 1,(document.querySelector('#apple_effect').offsetTop+9800) 0, "
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+7950) 2, (document.querySelector('#apple_effect').offsetTop+8800) 1,(document.querySelector('#apple_effect').offsetTop+9800) 0,">
+                <div class="sec-06 sec">
+                    <div class="About-06">
+                        <div class="en-title">ABOUT <u
+                                class="line-01">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</u>
+                        </div>
+                        <div class="cn-title">園區主題介紹</div>
+                    </div>
 
+                </div>
+            </div>
+        </div> -->
         <!-- 園區主題介紹 -->
 
         <!-- 鼓樂饗宴 -->
+        <div class="parallax_window">
+            <div class="effect_box lax"
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+9800) 0,(document.querySelector('#apple_effect').offsetTop+10650) 1,(document.querySelector('#apple_effect').offsetTop+11650) 0,"
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+9800) 0, (document.querySelector('#apple_effect').offsetTop+10650) 1, (document.querySelector('#apple_effect').offsetTop+11650) 2,">
+                <div class="sec-07">
+                    <img src="./img/插圖/雙人鼓-鼓樂饗宴背景用_工作區域 1.png" class="img-bac-01" alt="背景左">
+                    <img src="./img/插圖/雙人鼓-鼓樂饗宴背景用_工作區域 1.png" class="img-bac-02" alt="背景右">
+                    <div class="title-07">
+                        <i class="fas fa-circle"></i>
+                        <div class="sec-07-line">
+                            <div class="sec-07-title">鼓樂饗宴</div>
+                        </div><i class="fas fa-circle"></i>
+                    </div>
+                    <div class="sec-07-context">
+                        <div class="img-group">
+                            <img src="./img/十鼓樂團/3張合併_工作區域 1.png" alt="">
+                            <!-- <img src="./img/十鼓樂團/有水的打鼓照片.jpg" class="img-down" alt="">
+                            <img src="./img/十鼓樂團/海報.jpg" class="img-center" alt="">
+                            <img src="./img/十鼓樂團/海報2.jpg" class="img-top" alt=""> -->
+                        </div>
+                        <h3 class="sec-07-subtitle">十鼓擊樂團</h3>
+                        <div class="sec-07-text sty-bol">獲海內外金曲獎、葛萊美獎、美國獨立獎三項大獎提名
+                        </div>
+                        <div class="sec-07-text">以在地的題材、風景、多樣化民族擊樂的元素，豐富了傳統擊樂原有面貌，震撼的
+                            鼓樂和視覺效果一直以來深受觀眾喜愛。團長期望藉此喚起國人對傳統鼓樂的重視，
+                            企圖為台灣開創出一個熱鬧、多元兼具本土，且具有前瞻性的鼓術文化風格
+                            ，更期望能使台灣在世界上成為著名的【鼓樂之島】。 </div>
+                        <a href="./04-Drum.html" class="sec-07-more">more</a>
+                    </div>
+                </div>
+                <div class="footer">版權聲明</div>
+            </div>
+        </div>
+    </div>
+    <!-- 鼓樂饗宴 -->
 
-        <!-- 鼓樂饗宴 -->
+    <!-- 極限體驗 -->
+    <div class="parallax_window">
+        <div class="effect_box lax"
+            data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+7950) 0, (document.querySelector('#apple_effect').offsetTop+8800) 1,(document.querySelector('#apple_effect').offsetTop+9800) 0, "
+            data-lax-scale="(document.querySelector('#apple_effect').offsetTop+7950) 2, (document.querySelector('#apple_effect').offsetTop+8800) 1,(document.querySelector('#apple_effect').offsetTop+9800) 0,">
+            <div class="section sec-08 sec">
 
-        <!-- 極限體驗 -->
+            </div>
+        </div>
+    </div>
+    <!-- 極限體驗 -->
 
-        <!-- 極限體驗 -->
+    <!-- 特色餐飲 -->
 
-        <!-- 特色餐飲 -->
+    <!-- 特色餐飲 -->
 
-        <!-- 特色餐飲 -->
+    <!-- 文創空間 -->
 
-        <!-- 文創空間 -->
-
-        <!-- 文創空間 -->
-
-
-
+    <!-- 文創空間 -->
 
 
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-        <!-- 偽蘋果官網 -->
-        <script src="https://cdn.jsdelivr.net/npm/lax.js"></script>
-        <!-- 偽蘋果官網 -->
-        <script>
-            ////漢堡條///
-            const hamburger = document.querySelector('.hamburger')
-            const btn_group = document.querySelector('.btn-groupxxx')
-            const btns = btn_group.querySelector('.btn')
 
-            const offclick = () => {
-                btn_group.classList.toggle("active")
-                document.removeEventListener('click', offclick)
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <!-- 偽蘋果官網 -->
+    <script src="https://cdn.jsdelivr.net/npm/lax.js"></script>
+    <!-- 偽蘋果官網 -->
+    <script>
+        ////漢堡條///
+        const hamburger = document.querySelector('.hamburger')
+        const btn_group = document.querySelector('.btn-groupxxx')
+        const btns = btn_group.querySelector('.btn')
+
+        const offclick = () => {
+            btn_group.classList.toggle("active")
+            document.removeEventListener('click', offclick)
+            $(".stick").toggleClass(function () {
+                ///當點到漢堡條時MENU跟著被偵測顯示即隱藏///
+                $('.ham-menu').toggle('.display-none')
+                ///當點到漢堡條時MENU跟著被偵測顯示即隱藏///
+                return $(this).is('.open, .close') ? 'open close' : 'open';
+            });
+        }
+        const handclick = (e) => {
+            e.stopPropagation()
+            btn_group.classList.toggle("active")
+            if (btn_group.classList.contains("active")) {
+                document.addEventListener('click', offclick)
+            }
+        }
+        hamburger.addEventListener('click', handclick)
+        ///漢堡條任意點即可關閉菜單///
+
+        ///3條線變叉叉///
+        $(document).ready(function () {
+            $(".ham-ani").click(function () {
                 $(".stick").toggleClass(function () {
                     ///當點到漢堡條時MENU跟著被偵測顯示即隱藏///
                     $('.ham-menu').toggle('.display-none')
                     ///當點到漢堡條時MENU跟著被偵測顯示即隱藏///
                     return $(this).is('.open, .close') ? 'open close' : 'open';
                 });
-            }
-            const handclick = (e) => {
-                e.stopPropagation()
-                btn_group.classList.toggle("active")
-                if (btn_group.classList.contains("active")) {
-                    document.addEventListener('click', offclick)
-                }
-            }
-            hamburger.addEventListener('click', handclick)
-            ///漢堡條任意點即可關閉菜單///
-
-            ///3條線變叉叉///
-            $(document).ready(function () {
-                $(".ham-ani").click(function () {
-                    $(".stick").toggleClass(function () {
-                        ///當點到漢堡條時MENU跟著被偵測顯示即隱藏///
-                        $('.ham-menu').toggle('.display-none')
-                        ///當點到漢堡條時MENU跟著被偵測顯示即隱藏///
-                        return $(this).is('.open, .close') ? 'open close' : 'open';
-                    });
-                });
             });
-            ///3條線變叉叉///
-            ///漢堡條///
-            window.onload = function () {
-                lax.setup() // init
+        });
+        ///3條線變叉叉///
+        ///漢堡條///
+        window.onload = function () {
+            lax.setup() // init
 
-                const updateLax = () => {
-                    lax.update(window.scrollY)
-                    window.requestAnimationFrame(updateLax)
-                }
-
+            const updateLax = () => {
+                lax.update(window.scrollY)
                 window.requestAnimationFrame(updateLax)
             }
-            console.log(document.querySelector('#apple_effect').offsetTop);
-        </script>
+
+            window.requestAnimationFrame(updateLax)
+        }
+        console.log(document.querySelector('#apple_effect').offsetTop);
+    </script>
 </body>
 
 </html>
