--- a/01-About.html
+++ b/01-About.html
@@ -91,18 +91,18 @@
     <!-- 仿apple官網效果 -->
     <div id="apple_effect">
         <!-- 關於十鼓標題 -->
-        <!-- <div class="parallax_window">
+        <div class="parallax_window">
             <div class="effect_box lax"
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop) 1, (document.querySelector('#apple_effect').offsetTop+550) 0 "
                 data-lax-scale="(document.querySelector('#apple_effect').offsetTop+400) 1, (document.querySelector('#apple_effect').offsetTop+550) 2">
                 <div class="sec-01 sec">
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- 關於十鼓標題 -->
 
         <!-- 關於十鼓簡介 -->
-        <!-- <div class="parallax_window">
+        <div class="parallax_window">
             <div class="effect_box lax "
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+550) 0,(document.querySelector('#apple_effect').offsetTop+1400) 1,(document.querySelector('#apple_effect').offsetTop+2400) 0,"
                 data-lax-scale="(document.querySelector('#apple_effect').offsetTop+550) 2, (document.querySelector('#apple_effect').offsetTop+1400) 1,(document.querySelector('#apple_effect').offsetTop+2400) 0,">
@@ -117,11 +117,11 @@
                 </div>
 
             </div>
-        </div> -->
+        </div>
         <!-- 關於十鼓簡介 -->
 
         <!-- 沿革 -->
-        <!-- <div class="parallax_window">
+        <div class="parallax_window">
             <div class="effect_box lax"
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+2400) 0,(document.querySelector('#apple_effect').offsetTop+3250) 1,(document.querySelector('#apple_effect').offsetTop+4250) 0,"
                 data-lax-scale="(document.querySelector('#apple_effect').offsetTop+2400) 0, (document.querySelector('#apple_effect').offsetTop+3250) 1, (document.querySelector('#apple_effect').offsetTop+4250) 2,">
@@ -140,11 +140,11 @@
                     <div class="footer">版權聲明</div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- 沿革 -->
 
         <!-- 發展年表 -->
-        <!-- <div class="parallax_window">
+        <div class="parallax_window">
             <div class="effect_box lax "
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+4250) 0,(document.querySelector('#apple_effect').offsetTop+5100) 1,(document.querySelector('#apple_effect').offsetTop+6100) 0,"
                 data-lax-scale="(document.querySelector('#apple_effect').offsetTop+4250) 2, (document.querySelector('#apple_effect').offsetTop+5100) 1,(document.querySelector('#apple_effect').offsetTop+6100) 0,">
@@ -206,20 +206,18 @@
                                             <p>台南創立十鼓擊樂團 受邀至澳洲雪梨奧運聖火傳遞巡演</p>
                                         </div>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="footer">版權聲明</div>
                 </div>
-
             </div>
-        </div> -->
+        </div>
         <!-- 發展年表 -->
 
         <!-- 核心價值 -->
-        <!-- <div class="parallax_window">
+        <div class="parallax_window">
             <div class="effect_box lax"
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+6100) 0,(document.querySelector('#apple_effect').offsetTop+6950) 1,(document.querySelector('#apple_effect').offsetTop+7950) 0,"
                 data-lax-scale="(document.querySelector('#apple_effect').offsetTop+6100) 0, (document.querySelector('#apple_effect').offsetTop+6950) 1, (document.querySelector('#apple_effect').offsetTop+7950) 2,">
@@ -242,11 +240,11 @@
                     <div class="footer">版權聲明</div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- 核心價值 -->
 
         <!-- 園區主題介紹 -->
-        <!-- <div class="parallax_window">
+        <div class="parallax_window">
             <div class="effect_box lax"
                 data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+7950) 0, (document.querySelector('#apple_effect').offsetTop+8800) 1,(document.querySelector('#apple_effect').offsetTop+9800) 0, "
                 data-lax-scale="(document.querySelector('#apple_effect').offsetTop+7950) 2, (document.querySelector('#apple_effect').offsetTop+8800) 1,(document.querySelector('#apple_effect').offsetTop+9800) 0,">
@@ -260,7 +258,7 @@
 
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- 園區主題介紹 -->
 
         <!-- 鼓樂饗宴 -->
