合併夜的降轉圖、新增極限體驗

--- a/01-About.html
+++ b/01-About.html
@@ -30,7 +30,6 @@
 
 <body>
     <header>
-        
         <nav>
             <!-- 漢堡條 -->
             <div class="hamburger">
@@ -296,30 +295,52 @@
                 <div class="footer">版權聲明</div>
             </div>
         </div>
-    </div>
-    <!-- 鼓樂饗宴 -->
 
-    <!-- 極限體驗 -->
-    <div class="parallax_window">
-        <div class="effect_box lax"
-            data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+7950) 0, (document.querySelector('#apple_effect').offsetTop+8800) 1,(document.querySelector('#apple_effect').offsetTop+9800) 0, "
-            data-lax-scale="(document.querySelector('#apple_effect').offsetTop+7950) 2, (document.querySelector('#apple_effect').offsetTop+8800) 1,(document.querySelector('#apple_effect').offsetTop+9800) 0,">
-            <div class="section sec-08 sec">
+        <!-- 鼓樂饗宴 -->
 
+        <!-- 極限體驗 -->
+        <div class="parallax_window">
+            <div class="effect_box lax"
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+11650) 0, (document.querySelector('#apple_effect').offsetTop+12500) 1,(document.querySelector('#apple_effect').offsetTop+13500) 0, "
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+11650) 2, (document.querySelector('#apple_effect').offsetTop+12500) 1,(document.querySelector('#apple_effect').offsetTop+13500) 0,">
+                <div class="sec-08 sec">
+                    <div class="title-08">
+                        <i class="fas fa-circle"></i>
+                        <div class="sec-08-line">
+                            <div class="sec-08-title">極限體驗</div>
+                        </div><i class="fas fa-circle"></i>
+                    </div>
+                    <div class="sec-08-context">
+                        <div class="img-group">
+                            <img src="./img/主頁背景/關於-極限體驗.jpg" class="sec-08-img" alt="">
+
+                        </div>
+                        <div class="sec-08-textbox">
+                            <h3 class="sec-08-subtitle">十鼓仁糖文創園區
+                            </h3>
+                            <div class="sec-08-text">
+                                是日治時代老糖廠改建而成的藝術文化村，園區內有刺激的煙囪溜滑梯、飛天宅急便，還可以欣賞夢糖劇場鼓樂表演，就像來到「大人版的遊樂園」！十鼓仁糖文創園區鄰近奇美博物館，推薦大家可以安排順遊兩個台南景點的行程！
+                            </div>
+                            <a href="./03-Facility.html" class="sec-08-more">more</a>
+                        </div>
+
+                    </div>
+                    <div class="footer">版權聲明</div>
+
+                </div>
             </div>
         </div>
+        <!-- 極限體驗 -->
+
+        <!-- 特色餐飲 -->
+
+        <!-- 特色餐飲 -->
+
+        <!-- 文創空間 -->
+
+        <!-- 文創空間 -->
+
     </div>
-    <!-- 極限體驗 -->
-
-    <!-- 特色餐飲 -->
-
-    <!-- 特色餐飲 -->
-
-    <!-- 文創空間 -->
-
-    <!-- 文創空間 -->
-
-
 
 
 
