--- a/2020-10-10-入園資訊/入園資訊.html
+++ b/2020-10-10-入園資訊/入園資訊.html
@@ -87,7 +87,7 @@
         }
 
         .park_photobox {
-            height: 80%;
+            height: 100%;
             width: 100%;
             background-color: rgb(140, 40, 233);
 
@@ -103,7 +103,7 @@
         .park_inf_photo {
             height: 100%;
             width: 100%;
-            background-color: darksalmon;
+            /* background-color: darksalmon; */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -150,7 +150,7 @@
             <div class="park_lease_box">交通資訊</div>
             <div class="park_lease_box">園區導覽</div>
             <a class="park_show"
-                href="">定目劇演出</a>
+                href="../04-Drum.html">定目劇演出</a>
 
         </div>
 
