--- a/01-About.html
+++ b/01-About.html
@@ -104,8 +104,8 @@
         <!-- 關於十鼓簡介 -->
         <div class="parallax_window">
             <div class="effect_box lax "
-                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+550) 0,(document.querySelector('#apple_effect').offsetTop+1400) 1,(document.querySelector('#apple_effect').offsetTop+2400) 0,"
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+550) 2, (document.querySelector('#apple_effect').offsetTop+1400) 1,(document.querySelector('#apple_effect').offsetTop+2400) 0,">
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+550) 0,(document.querySelector('#apple_effect').offsetTop+1100) 1,(document.querySelector('#apple_effect').offsetTop+2100) 0,"
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+550) 3, (document.querySelector('#apple_effect').offsetTop+1100) 1,">
                 <div class="sec-02 sec ">
                     <div class="About ">
                         <div class="about-title">關於十鼓</div>
@@ -123,8 +123,8 @@
         <!-- 沿革 -->
         <div class="parallax_window">
             <div class="effect_box lax"
-                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+2400) 0,(document.querySelector('#apple_effect').offsetTop+3250) 1,(document.querySelector('#apple_effect').offsetTop+4250) 0,"
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+2400) 0, (document.querySelector('#apple_effect').offsetTop+3250) 1, (document.querySelector('#apple_effect').offsetTop+4250) 2,">
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+2100) 0,(document.querySelector('#apple_effect').offsetTop+2650) 1,(document.querySelector('#apple_effect').offsetTop+3650) 0,"
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+2100) 3, (document.querySelector('#apple_effect').offsetTop+2650) 1,">
                 <div class="sec-03 sec">
                     <div class=" About">
                         <div class="about-title">沿革</div>
@@ -146,8 +146,8 @@
         <!-- 發展年表 -->
         <div class="parallax_window">
             <div class="effect_box lax "
-                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+4250) 0,(document.querySelector('#apple_effect').offsetTop+5100) 1,(document.querySelector('#apple_effect').offsetTop+6100) 0,"
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+4250) 2, (document.querySelector('#apple_effect').offsetTop+5100) 1,(document.querySelector('#apple_effect').offsetTop+6100) 0,">
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+3650) 0,(document.querySelector('#apple_effect').offsetTop+4200) 1,(document.querySelector('#apple_effect').offsetTop+5200) 0,"
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+3650) 3, (document.querySelector('#apple_effect').offsetTop+4200) 1,">
                 <div class="sec-04 sec ">
                     <div class="About-02">
                         <div class="about-title-02">發展年表</div>
@@ -219,8 +219,8 @@
         <!-- 核心價值 -->
         <div class="parallax_window">
             <div class="effect_box lax"
-                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+6100) 0,(document.querySelector('#apple_effect').offsetTop+6950) 1,(document.querySelector('#apple_effect').offsetTop+7950) 0,"
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+6100) 0, (document.querySelector('#apple_effect').offsetTop+6950) 1, (document.querySelector('#apple_effect').offsetTop+7950) 2,">
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+5200) 0,(document.querySelector('#apple_effect').offsetTop+5750) 1,(document.querySelector('#apple_effect').offsetTop+6750) 0,"
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+5200) 3, (document.querySelector('#apple_effect').offsetTop+5750) 1, ">
                 <div class="sec-05 sec">
                     <div class=" About-03">
                         <div class="about-title">核心價值</div>
@@ -246,8 +246,8 @@
         <!-- 園區主題介紹 -->
         <div class="parallax_window">
             <div class="effect_box lax"
-                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+7950) 0, (document.querySelector('#apple_effect').offsetTop+8800) 1,(document.querySelector('#apple_effect').offsetTop+9800) 0, "
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+7950) 2, (document.querySelector('#apple_effect').offsetTop+8800) 1,(document.querySelector('#apple_effect').offsetTop+9800) 0,">
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+6750) 0, (document.querySelector('#apple_effect').offsetTop+7300) 1,(document.querySelector('#apple_effect').offsetTop+8300) 0, "
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+6750) 3, (document.querySelector('#apple_effect').offsetTop+7300) 1,">
                 <div class="sec-06 sec">
                     <div class="About-06">
                         <div class="en-title">ABOUT <u
@@ -264,8 +264,8 @@
         <!-- 鼓樂饗宴 -->
         <div class="parallax_window">
             <div class="effect_box lax"
-                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+9800) 0,(document.querySelector('#apple_effect').offsetTop+10650) 1,(document.querySelector('#apple_effect').offsetTop+11650) 0,"
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+9800) 0, (document.querySelector('#apple_effect').offsetTop+10650) 1, (document.querySelector('#apple_effect').offsetTop+11650) 2,">
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+8300) 0,(document.querySelector('#apple_effect').offsetTop+8850) 1,(document.querySelector('#apple_effect').offsetTop+9850) 0,"
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+8300) 3, (document.querySelector('#apple_effect').offsetTop+8850) 1, ">
                 <div class="sec-07">
                     <img src="./img/插圖/雙人鼓-鼓樂饗宴背景用_工作區域 1.png" class="img-bac-01" alt="背景左">
                     <img src="./img/插圖/雙人鼓-鼓樂饗宴背景用_工作區域 1.png" class="img-bac-02" alt="背景右">
@@ -301,8 +301,8 @@
         <!-- 極限體驗 -->
         <div class="parallax_window">
             <div class="effect_box lax"
-                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+11650) 0, (document.querySelector('#apple_effect').offsetTop+12500) 1,(document.querySelector('#apple_effect').offsetTop+13500) 0, "
-                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+11650) 2, (document.querySelector('#apple_effect').offsetTop+12500) 1,(document.querySelector('#apple_effect').offsetTop+13500) 0,">
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+9850) 0, (document.querySelector('#apple_effect').offsetTop+10400) 1,(document.querySelector('#apple_effect').offsetTop+11400) 0, "
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+9850) 3, (document.querySelector('#apple_effect').offsetTop+10400) 1,">
                 <div class="sec-08 sec">
                     <div class="title-08">
                         <i class="fas fa-circle"></i>
@@ -333,11 +333,72 @@
         <!-- 極限體驗 -->
 
         <!-- 特色餐飲 -->
+        <div class="parallax_window">
+            <div class="effect_box lax"
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+11400) 0, (document.querySelector('#apple_effect').offsetTop+11950) 1,(document.querySelector('#apple_effect').offsetTop+12950) 0, "
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+11400) 3, (document.querySelector('#apple_effect').offsetTop+11950) 1,">
+                <div class="sec-09 sec">
+                    <div class="title-08">
+                        <i class="fas fa-circle"></i>
+                        <div class="sec-08-line">
+                            <div class="sec-08-title">特色餐飲</div>
+                        </div><i class="fas fa-circle"></i>
+                    </div>
+                    <div class="sec-09-context">
+                        <div class="img-group-09">
+                            <div class="img-09 "><img src="./img/關於頁面/特色/打鼓餅.jpg" alt=""></div>
+                            <div class="img-09 pic02"></div>
+                            <div class="img-09 pic03"></div>
+                            <div class="img-09 pic04"></div>
+                            <div class="img-09 pic05"></div>
+                            <div class="img-09 pic06"></div>
+                            <div class="img-09-team">
+                                <img src="./img/關於頁面/特色/打鼓餅.jpg" class="img-09-01" alt="">
+                            <img src="./img/關於頁面/特色/打鼓餅.jpg" class="img-09-01" alt="">
+                            </div>
+                            
 
+                        </div>
+                    </div>
+                    <div class="footer">版權聲明</div>
+
+                </div>
+            </div>
+        </div>
         <!-- 特色餐飲 -->
 
         <!-- 文創空間 -->
+        <div class="parallax_window">
+            <div class="effect_box lax"
+                data-lax-opacity="(document.querySelector('#apple_effect').offsetTop+12950) 0, (document.querySelector('#apple_effect').offsetTop+13500) 1,(document.querySelector('#apple_effect').offsetTop+14500) 0, "
+                data-lax-scale="(document.querySelector('#apple_effect').offsetTop+12950) 3, (document.querySelector('#apple_effect').offsetTop+13500) 1,">
+                <div class="sec-08 sec">
+                    <div class="title-08">
+                        <i class="fas fa-circle"></i>
+                        <div class="sec-08-line">
+                            <div class="sec-08-title">極限體驗</div>
+                        </div><i class="fas fa-circle"></i>
+                    </div>
+                    <div class="sec-08-context">
+                        <div class="img-group">
+                            <img src="./img/主頁背景/關於-極限體驗.jpg" class="sec-08-img" alt="">
 
+                        </div>
+                        <div class="sec-08-textbox">
+                            <h3 class="sec-08-subtitle">十鼓仁糖文創園區
+                            </h3>
+                            <div class="sec-08-text">
+                                是日治時代老糖廠改建而成的藝術文化村，園區內有刺激的煙囪溜滑梯、飛天宅急便，還可以欣賞夢糖劇場鼓樂表演，就像來到「大人版的遊樂園」！十鼓仁糖文創園區鄰近奇美博物館，推薦大家可以安排順遊兩個台南景點的行程！
+                            </div>
+                            <a href="./03-Facility.html" class="sec-08-more">more</a>
+                        </div>
+
+                    </div>
+                    <div class="footer">版權聲明</div>
+
+                </div>
+            </div>
+        </div>
         <!-- 文創空間 -->
 
     </div>
