--- a/2020-10-10-入園資訊/入園資訊.html
+++ b/2020-10-10-入園資訊/入園資訊.html
@@ -68,7 +68,7 @@
         .park_lease_box {
             height: 20%;
             width: 100%;
-            /* background-color: rgb(233, 40, 159); */
+            background-color: rgb(233, 40, 159);
             font-size: 32px;
             display: flex;
             align-items: center;
